# UNSW-CSE-Thesis

./: .gitmodules  404.html  Book1.xlsx  Book2.xlsx  Doc1.docx  README.md  _.min.2f73f9dd7d439f6f001058d13da984dadd8bb87f9f9085d44d46e3ba00164816.css  _.min.7d694823d2d9d1ee48251589ba394b2e82b7846e813e97bb6ffd80beb2eca778.css  _.min.92362cc8c3cd71919e6ec6ad37d40b05e67c1ea1a249f5b99f579dc3216d4959.css  _.min.a230c4a7a1567dd6102968d8163a8141477da8488849428e390a8cd00a44c5a7.css  _.min.aae64fea6fbed8955ca810c33ca5c07ef9e275c24c07999d7ff1e17559676ce9.css  _.min.d5df08a2ad508e8523e78728a4aba9189b94165888c7d7f08e82f2d0af573c16.css  index.html  index.xml  sitemap.xml
.github/workflows/: gh-pages.yml
authors/: index.html  index.xml
authors/example-author/: index.html  index.xml
authors/hugo-authors/: index.html  index.xml
categories/: index.html  index.xml
categories/filesystem/: index.html  index.xml
categories/thesis-a/: index.html  index.xml
categories/v01.15.58/: index.html  index.xml
categories/v02.29.02/: index.html  index.xml
docs/: index.html  index.xml
docs/poc/: index.html  (+1 more)
misc/: network.drawio
mud/: index.html
network_captures/: do_device_pair.pcapng
network_captures/analysis/: pyproject.toml
network_captures/analysis/dns_analysis/: .pdm.toml  dns_response_aggregator.py
posts/: index.html  index.xml
presentations/: index.html  index.xml
series/: index.html  index.xml
site/: .gitignore  README.md  config.toml
tags/: index.html  index.xml
tldr/: bundle.css.map  bundle.js  bundle.js.map
uploads/: assessment-scope-diagram.drawio
(+532 files in other folders)
