[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Andrew Wong", email = "andrew.j.wong@outlook.com"},
]
dependencies = [
    "pyshark>=0.5.3",
    "dpkt>=1.9.7.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
